--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,55 @@ button.btn-close {
     width: 60%;
 }
 
+.main-flex-catalog {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+}
+
+.main-catalog-item {
+    width: 24%;
+    margin-bottom: 20px;
+    transition: all .3s linear;
+}
+
+.main-catalog-image img {
+    width: 100%;
+}
+
+.main-catalog-title {
+    margin-top: 10px;
+    padding: 0 15px;
+}
+
+.main-catalog-title a {
+    font-size: 24px;
+}
+
+.main-catalog-description {
+    color: #3f4049;
+    padding: 15px;
+}
+
+.page-btn {
+    background-color: transparent;
+    color: #3f4049;
+    border: 2px solid #3f4049;
+    padding: 8px 22px;
+    font-size: 20px;
+}
+
+.main-catalog-item:hover {
+    box-shadow: 0px 2px 64px -13px #333;
+}
+
+.page-btn:hover {
+    background-color: #3f4049;
+    color: #fff;
+    border-bottom: 2px solid #3f4049;
+}
+
 @media (max-width: 1760px) {
     .main-text-block {
         top: 30px;
