--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ button.btn-close {
 }
 
 .main-catalog-title a {
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .main-catalog-description {
@@ -327,6 +327,16 @@ button.btn-close {
     background-color: #3f4049;
     color: #fff;
     border-bottom: 2px solid #3f4049;
+}
+
+.header-block-btns .page-btn {
+    color: #fff;
+    border: 2px solid #fff;
+}
+
+.header-block-btns .page-btn:hover {
+    color: #3f4049;
+    background-color: #fff;
 }
 
 @media (max-width: 1760px) {
