--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,10 @@ button.btn-close {
     width: 24%;
     margin-bottom: 20px;
     transition: all .3s linear;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 10px;
 }
 
 .main-catalog-image img {
