--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,74 @@ button.btn-close {
     width: 100%;
 }
 
+.good-item-page {
+    display: flex;
+    margin-bottom: 40px;
+    padding-bottom: 40px;
+    border-bottom: 2px dotted #ddd;
+}
+
+.good-item-page-img {
+    padding-right: 20px;
+}
+
+.good-item-page-img img {
+    width: 100%;
+}
+
+.good-item-page-img,
+.good-item-description {
+    width: 50%;
+}
+
+.cart-tab-property-title {
+    font-size: 24px;
+    margin-bottom: 40px;
+}
+
+.good-main-desk {
+    margin-bottom: 60px;
+    position: relative;
+    overflow: hidden;
+}
+
+.fixed-images-good {
+    position: absolute;
+    width: 100%;
+}
+
+.text-images-good {
+    position: relative;
+    padding: 20px;
+    color: #fff;
+}
+
+.overlay-block {
+    background: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.text-images-good p {
+    position: relative;
+}
+
+.fixed-images-good img {
+    width: 100%;
+}
+
+.list-goods-page {
+    list-style: none;
+}
+
+.list-goods-page i {
+    color: #da2508;
+    font-size: 20px;
+}
+
 @media(max-width:1199px) {
     .main-catalog-item {
         width: 32%;
@@ -469,6 +537,20 @@ button.btn-close {
     .flex-advantages-item-block {
         border-bottom: 1px solid #efefef;
         margin-bottom: 10px;
+    }
+
+    .good-item-page {
+        flex-direction: column;
+    }
+
+    .good-item-page-img,
+    .good-item-description {
+        width: 100%;
+    }
+
+    .good-item-page-img {
+        margin-bottom: 20px;
+        padding-right: 0;
     }
 }
 
